add postgis raster extension

--- a/openshift/ocp4/crunchy-postgres/postgres.deploy.yaml
+++ b/openshift/ocp4/crunchy-postgres/postgres.deploy.yaml
@@ -111,6 +111,7 @@ objects:
 
         create extension postgis;
         create extension postgis_topology;
+        create extension postgis_raster;
         create extension fuzzystrmatch;
         create extension postgis_tiger_geocoder;
         create extension pg_stat_statements;
