switch to crunchy for local dev (to match server)

--- a/env-backend.env
+++ b/env-backend.env
@@ -4,3 +4,6 @@ API_SERVICE=backend:8000
 WALLY_ENV=DEV
 API_VERSION=1
 WALLY_VERSION=1.0.0
+POSTGRES_DB=wally
+POSTGRES_USER=wally
+POSTGRES_PASSWORD=test_pw
