--- a/env-postgres.env
+++ b/env-postgres.env
@@ -1,9 +1,15 @@
 # local dev settings for docker-compose
 
 POSTGRES_SERVER=db
-POSTGRES_USER=wally
-POSTGRES_PASSWORD=test_pw
-POSTGRES_DB=wally
+PG_PRIMARY_PORT=5432
+PG_PRIMARY_USER=primaryuser
+PG_PRIMARY_PASSWORD=test_pw
+PG_ROOT_PASSWORD=test_pw
+PG_USER=wally
+PG_PASSWORD=test_pw
+PG_DATABASE=wally
+MODE=postgres
+PG_MODE=primary
 DATABASE_URL=postgres://wally:test_pw@db:5432/wally
 # SQLite memory database
 TEST_DATABASE_URL=sqlite://
