--- a/openshift/ocp4/frontend.build.yaml
+++ b/openshift/ocp4/frontend.build.yaml
@@ -39,7 +39,7 @@ objects:
       runPolicy: SerialLatestOnly
       source:
         contextDir: frontend
-        dockerfile: Dockerfile.ocp4
+        dockerfile: frontend/Dockerfile.ocp4
         git:
           ref: "${GIT_REF}"
           uri: "${GIT_REPO}"
