--- a/env-postgres.env
+++ b/env-postgres.env
@@ -1,4 +1,5 @@
 # local dev settings for docker-compose
+POSTGIS_ENABLE_OUTDB_RASTERS=1
 POSTGIS_GDAL_ENABLED_DRIVERS='GTiff PNG JPEG'
 POSTGRES_SERVER=db
 PG_PRIMARY_PORT=5432
@@ -13,3 +14,4 @@ PG_MODE=primary
 DATABASE_URL=postgres://wally:test_pw@db:5432/wally
 # SQLite memory database
 TEST_DATABASE_URL=sqlite://
+PGDATA_PATH_OVERRIDE=e065b23fac2f
