add source secret

--- a/openshift/ocp4/minio/minio.bc.yaml
+++ b/openshift/ocp4/minio/minio.bc.yaml
@@ -42,6 +42,8 @@ objects:
         ref: "${SRC_REPO_BRANCH}"
         uri: "${SRC_REPO_URL}"
       type: Git
+      sourceSecret:
+        name: wally-github-token
     strategy:
       type: Docker
     output:
