--- a/openshift/ocp4/minio/docker/Dockerfile
+++ b/openshift/ocp4/minio/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM minio/minio:latest
+FROM docker-remote.artifacts.developer.gov.bc.ca/minio/minio:latest
 
 COPY ./minio-entrypoint.sh /
 ENTRYPOINT /minio-entrypoint.sh
