--- a/env-postgres.env
+++ b/env-postgres.env
@@ -15,3 +15,9 @@ DATABASE_URL=postgres://wally:test_pw@db:5432/wally
 # SQLite memory database
 TEST_DATABASE_URL=sqlite://
 PGDATA_PATH_OVERRIDE=e065b23fac2f
+TEMP_BUFFERS=9MB
+PGHOST=/tmp
+MAX_CONNECTIONS=101
+SHARED_BUFFERS=129MB
+MAX_WAL_SENDERS=7
+WORK_MEM=5MB
