--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
-VUE_APP_AXIOS_BASE_URL = 'http://localhost:8000'
+VUE_APP_AXIOS_BASE_URL = 'http://192.168.0.18:8000'
 VUE_APP_ENV = 'dev'
 
 # Mapbox
