--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -20,7 +20,7 @@ WORKDIR /app/
 
 RUN useradd wally -M -G root -u 1021 && chmod -R 775 /app \
   && chown -R wally:root /app \ 
-  && apt-get -y install ca-certificates
+  && apt-get update && apt-get -y install ca-certificates libgdal-dev python-gdal gdal-bin
 
 COPY ./requirements.txt /
 
