--- a/openshift/ocp4/backend.deploy.yaml
+++ b/openshift/ocp4/backend.deploy.yaml
@@ -163,10 +163,7 @@ objects:
                 key: minioSecretKey
                 name: minio
           - name: MINIO_HOST_URL
-            valueFrom:
-              secretKeyRef:
-                key: minioHostUrl
-                name: minio
+            value: wally-minio-${NAME}
           - name: WATERSHED_DEBUG
             valueFrom:
               secretKeyRef:
