add extensions to db startup scripts

--- a/openshift/ocp4/crunchy-postgres/postgres.deploy.yaml
+++ b/openshift/ocp4/crunchy-postgres/postgres.deploy.yaml
@@ -117,6 +117,8 @@ objects:
         create extension pg_stat_statements;
         create extension pgaudit;
         create extension plr;
+        create extension ltree;
+        create extension pg_trgm;
 
         \c "PG_DATABASE" "PG_USER";
 
