--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -63,7 +63,8 @@ rasterio==1.2.1
 requests==2.22.0
 six==1.12.0
 Shapely==1.6.4.post2
-SQLAlchemy==1.3.5
+SQLAlchemy==1.4.7
+SQLAlchemy-Utils==0.37.0
 starlette==0.13.4
 tenacity==5.0.4
 typed-ast==1.4.0
