--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,11 +11,11 @@ RUN pip install -r /requirements.txt
 
 COPY . /app
 
-# whitebox_tools is added to /tmp by the BuildConfig, which
+# whitebox_tools is added to the context dir by the BuildConfig, which
 # copies it from the whiteboxtools:latest imagestream.
 # the BuildConfig also copies whitebox_tools.py (WBT Python bindings)
 # into the context dir so it gets copied by the COPY directive above.
-COPY /tmp/whitebox_tools /usr/local/bin
+COPY whitebox_tools /usr/local/bin
 
 ENV PYTHONPATH=/app
 RUN pytest /app/tests/ -W ignore::DeprecationWarning
