move wbt copy directive above the "copy all" one

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,13 +9,14 @@ COPY ./requirements.txt /
 
 RUN pip install -r /requirements.txt
 
-COPY . /app
-
 # whitebox_tools is added to the context dir by the BuildConfig, which
 # copies it from the whiteboxtools:latest imagestream.
 # the BuildConfig also copies whitebox_tools.py (WBT Python bindings)
-# into the context dir so it gets copied by the COPY directive above.
+# into the context dir so it gets copied by the COPY directive below.
 COPY ./whitebox_tools /usr/local/bin
+COPY . /app
+
+
 
 ENV PYTHONPATH=/app
 RUN pytest /app/tests/ -W ignore::DeprecationWarning
