--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,8 @@ RUN pip install -r /requirements.txt
 # copies it from the whiteboxtools:latest imagestream.
 # the BuildConfig also copies whitebox_tools.py (WBT Python bindings)
 # into the context dir so it gets copied by the COPY directive below.
-COPY ./whitebox_tools /usr/local/bin
+COPY ./wbt/target/x86_64-unknown-linux-musl/release/whitebox_tools /usr/local/bin
+COPY ./wbt/whitebox_tools.py /app
 COPY . /app
 
 
