--- a/openshift/ocp4/backend.build.yaml
+++ b/openshift/ocp4/backend.build.yaml
@@ -49,9 +49,7 @@ objects:
           kind: ImageStreamTag
           name: whiteboxtools:latest
         paths: 
-        - sourcePath: /wbt/whitebox_tools.py
-          destinationDir: "."
-        - sourcePath: /wbt/target/x86_64-unknown-linux-musl/release/whitebox_tools
+        - sourcePath: /wbt
           destinationDir: "."
       contextDir: backend
       git:
