--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,14 @@
 FROM python:3.7
 
+WORKDIR /app/
 
 # whitebox_tools is added to the context dir by the BuildConfig, which
 # copies it from the whiteboxtools:latest imagestream.
 # the BuildConfig also copies whitebox_tools.py (WBT Python bindings)
 # into the context dir so it gets copied by the COPY directive below.
-COPY /wbt/target/x86_64-unknown-linux-musl/release/whitebox_tools /usr/local/bin
-COPY /wbt/whitebox_tools.py /app
+COPY /wbt/target/x86_64-unknown-linux-musl/release/whitebox_tools /usr/local/bin/
+COPY /wbt/whitebox_tools.py /app/
 
-WORKDIR /app/
 RUN useradd wally -M -G root -u 1021 && chmod -R 775 /app \
   && chown -R wally:root /app \ 
   && apt-get update && apt-get -y install ca-certificates libgdal-dev gdal-bin
