--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -253,11 +253,36 @@ requests:
     method: get
     expect:
       status: 200
-  - name: Watersheds available at point
-    url: "{{host}}/api/v1/watersheds/?point=%5B-122.99920612772564%2C50.09566411230176%5D"
+  - name: Watershed at point (using DEM)
+    url: "{{host}}/api/v1/watersheds/?point=%5B-123.00569724659113%2C50.14366252500119%5D&include_self=false&upstream_method=DEM"
     method: get
     expect:
       status: 200
+      values:
+        upstream_method: "generated_dem"
+        watershed.properties.FEATURE_AREA_SQM:
+          gt: 24987880
+          lt: 24987881  # float field.  use range to check value is valid.
+  - name: Watershed at point (using DEM and refine with FWA)
+    url: "{{host}}/api/v1/watersheds/?point=%5B-122.95641297167052%2C50.16143334016911%5D&include_self=false&upstream_method=DEM%2BFWA"
+    method: get
+    expect:
+      status: 200
+      values:
+        upstream_method: "generated_dem_fwa"
+        watershed.properties.FEATURE_AREA_SQM:
+          gt: 635898
+          lt: 635899  # float field.  use range to check value is valid.
+  - name: Watershed at point (using DEM and refine with FWA) - Test 2
+    url: "{{host}}/api/v1/watersheds/?point=%5B-122.90906363692298%2C50.07010783054966%5D&include_self=false&upstream_method=DEM%2BFWA"
+    method: get
+    expect:
+      status: 200
+      values:
+        upstream_method: "generated_dem_fwa"
+        watershed.properties.FEATURE_AREA_SQM:
+          gt: 48779458
+          lt: 48779459  # float field.  use range to check value is valid.
   - name: Streamflow Inventory report at point
     url: "{{host}}/api/v1/watersheds/streamflow_inventory?point=%5B-123.1688685736714%2C49.87612710876371%5D"
     method: get
