change to new GDAL version for importing data

--- a/openshift/import-jobs/importer.build.yaml
+++ b/openshift/import-jobs/importer.build.yaml
@@ -41,8 +41,9 @@ objects:
       strategy:
         dockerStrategy:
           from:
-            kind: "DockerImage"
-            name: "debian:latest"
+            kind: ImageStreamTag
+            name: gdal:latest
+            namespace: d1b5d2-tools
         type: Docker
       successfulBuildsHistoryLimit: 5
       triggers:
