--- a/openshift/import-jobs/cdem.job.yaml
+++ b/openshift/import-jobs/cdem.job.yaml
@@ -7,6 +7,8 @@ parameters:
   displayName: Environment name
   name: ENV_NAME
   value: staging
+- name: MINIO_HOST_URL
+  value: "http://minio:9000"
 objects:
   - apiVersion: batch/v1
     kind: Job
@@ -26,7 +28,7 @@ objects:
         spec:
           containers:
           - name: importer
-            image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+            image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
             command: ['/dataload/load_cdem.sh']
             resources:
               requests:
@@ -61,6 +63,8 @@ objects:
                 secretKeyRef:
                   key: minioSecretKey
                   name: minio
+            - name: MINIO_HOST_URL
+              value: "${MINIO_HOST_URL}"
             - name: POSTGRES_SERVER
-              value: wally-psql-master-${ENV_NAME}
+              value: wally-psql-${ENV_NAME}
           restartPolicy: Never
