--- a/openshift/import-jobs/prism.job.yaml
+++ b/openshift/import-jobs/prism.job.yaml
@@ -11,6 +11,8 @@ parameters:
   displayName: Layer name
   name: DATASET_NAME
   value: 'pr'
+- name: MINIO_HOST_URL
+  value: "http://minio:9000"
 objects:
   - apiVersion: batch/v1
     kind: Job
@@ -30,7 +32,7 @@ objects:
         spec:
           containers:
           - name: importer
-            image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+            image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
             command: ['/dataload/load_prism.sh']
             args: ['${DATASET_NAME}']
             resources:
@@ -67,5 +69,7 @@ objects:
                   key: minioSecretKey
                   name: minio
             - name: POSTGRES_SERVER
-              value: wally-psql-master-${ENV_NAME}
+              value: wally-psql-${ENV_NAME}
+            - name: MINIO_HOST_URL
+              value: "${MINIO_HOST_URL}"
           restartPolicy: Never
