--- a/openshift/import-jobs/hydat.job.yaml
+++ b/openshift/import-jobs/hydat.job.yaml
@@ -25,7 +25,7 @@ objects:
         spec:
           containers:
           - name: importer
-            image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+            image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
             command: ['/dataload/load_hydat.sh']
             resources:
               requests:
@@ -51,5 +51,5 @@ objects:
                   key: app-db-name
                   name: wally-psql
             - name: POSTGRES_SERVER
-              value: wally-psql-master-${ENV_NAME}
+              value: wally-psql-${ENV_NAME}
           restartPolicy: Never
