--- a/openshift/import-jobs/mapbox-upload.cron.job.yaml
+++ b/openshift/import-jobs/mapbox-upload.cron.job.yaml
@@ -46,7 +46,7 @@ objects:
             spec:
               containers:
               - name: importer
-                image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+                image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
                 command: ['/dataload/upload_tileset.sh']
                 args: ['${LAYER_NAME}']
                 resources:
@@ -83,5 +83,5 @@ objects:
                       key: minioSecretKey
                       name: minio
                 - name: POSTGRES_SERVER
-                  value: wally-psql-master-${ENV_NAME}
+                  value: wally-psql-${ENV_NAME}
               restartPolicy: OnFailure
