--- a/openshift/import-jobs/mapbox-upload.job.yaml
+++ b/openshift/import-jobs/mapbox-upload.job.yaml
@@ -35,7 +35,7 @@ objects:
         spec:
           containers:
           - name: importer
-            image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+            image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
             command: ['/dataload/upload_tileset.sh']
             args: ['${LAYER_NAME}']
             resources:
@@ -77,5 +77,5 @@ objects:
                   key: MAPBOX_UPLOAD_TOKEN
                   name: mapbox-access-token
             - name: POSTGRES_SERVER
-              value: wally-psql-master-${ENV_NAME}
+              value: wally-psql-${ENV_NAME}
           restartPolicy: Never
