--- a/openshift/import-jobs/tippecanoe.job.yaml
+++ b/openshift/import-jobs/tippecanoe.job.yaml
@@ -35,7 +35,7 @@ objects:
         spec:
           containers:
           - name: importer
-            image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+            image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
             command: ['/dataload/create_tileset.sh']
             args: ['${LAYER_NAME}']
             resources:
@@ -72,5 +72,5 @@ objects:
                   key: minioSecretKey
                   name: minio
             - name: POSTGRES_SERVER
-              value: wally-psql-master-${ENV_NAME}
+              value: wally-psql-${ENV_NAME}
           restartPolicy: Never
