--- a/openshift/import-jobs/wfs.job.yaml
+++ b/openshift/import-jobs/wfs.job.yaml
@@ -16,6 +16,8 @@ parameters:
   name: JOB_NAME
   required: true
   value: dataload
+- name: MINIO_HOST_URL
+  value: "http://minio:9000"
 objects:
   - apiVersion: batch/v1
     kind: Job
@@ -35,7 +37,7 @@ objects:
         spec:
           containers:
           - name: importer
-            image: docker-registry.default.svc:5000/bfpeyx-tools/wally-importer:latest
+            image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/wally-importer:latest
             command: ['/dataload/wfs_direct_download.sh']
             args: ['${LAYER_NAME}']
             resources:
@@ -72,5 +74,5 @@ objects:
                   key: minioSecretKey
                   name: minio
             - name: POSTGRES_SERVER
-              value: wally-psql-master-${ENV_NAME}
+              value: wally-psql-${ENV_NAME}
           restartPolicy: Never
