--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,5 +57,21 @@ services:
     ports:
       - "7800:7800"
     entrypoint: sh -c "sleep 10; /app/pg_tileserv"
+  minio:
+    image: minio/minio:RELEASE.2021-04-22T15-44-28Z
+    volumes:
+      - ./backend/fixtures/:/data
+    ports:
+      - "9000:9000"
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    command: server /data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+  
 volumes:
   pgdata-volume:
