--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
       COMMON_DOCGEN_CLIENT_SECRET: "${COMMON_DOCGEN_CLIENT_SECRET}"
       COMMON_DOCGEN_SSO_ENDPOINT: "${COMMON_DOCGEN_SSO_ENDPOINT}"
       COMMON_DOCGEN_ENDPOINT: "${COMMON_DOCGEN_ENDPOINT}"
-      MINIO_ACCESS_KEY: "${MINIO_ACCESS_KEY}"
-      MINIO_SECRET_KEY: "${MINIO_SECRET_KEY}"
-      MINIO_HOST_URL: "${MINIO_HOST_URL}"
+      MINIO_ACCESS_KEY: "${MINIO_ACCESS_KEY:-minio}" # default to the minio service defined below.
+      MINIO_SECRET_KEY: "${MINIO_SECRET_KEY:-minio123}" 
+      MINIO_HOST_URL: "${MINIO_HOST_URL:-minio:9000}"
       GDAL_DATA: /usr/share/gdal/
     ports:
       - '8000:8000'
