--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,12 +60,17 @@ services:
   minio:
     image: minio/minio:RELEASE.2021-04-22T15-44-28Z
     volumes:
-      - ./backend/fixtures/:/data
+      - minio-volume:/data:z
+      - type: bind
+        source: ./scripts/minio-dev.sh
+        target: /mnt/minio-dev.sh
+        consistency: cached
     ports:
       - "9000:9000"
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
+    entrypoint: /mnt/minio-dev.sh
     command: server /data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -75,3 +80,4 @@ services:
   
 volumes:
   pgdata-volume:
+  minio-volume:
