--- a/backend/api-tests/watersheds.apitest.yaml
+++ b/backend/api-tests/watersheds.apitest.yaml
@@ -55,6 +55,11 @@ requests:
         from: watershed.id
       - var: generated_watershed_id
         from: generated_watershed_id
+  - name: Watershed at point 3 - details
+    url: "{{host}}/api/v1/watersheds/{{watershed_id}}?generated_id={{generated_watershed_id}}"
+    method: get
+    expect:
+      status: 200
   - name: Watershed at point 3 - licences
     url: "{{host}}/api/v1/watersheds/{{watershed_id}}/licences?generated_id={{generated_watershed_id}}"
     method: get
