--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     depends_on:
       - db
   db:
-    image: crunchydata/crunchy-postgres-gis:centos8-13.2-3.0-4.6.2
+    build: database
     env_file:
       - env-postgres.env
     volumes:
