--- a/backend/api-tests/watersheds.apitest.yaml
+++ b/backend/api-tests/watersheds.apitest.yaml
@@ -73,6 +73,39 @@ requests:
         solar_exposure:
           gt: 0.64
           lt: 0.65
+  - name: Watershed at point 4 - very small watershed
+    url: "{{host}}/api/v1/watersheds/?point=%5B-122.95785755130225%2C50.169544156840175%5D&upstream_method=DEM%2BFWA"
+    method: get
+    expect:
+      status: 200
+      values:
+        upstream_method: "generated_dem_fwa"
+        watershed.properties.FEATURE_AREA_SQM:
+          gt: 52000
+          lt: 53000
+    set:
+      - var: watershed_id
+        from: watershed.id
+      - var: generated_watershed_id
+        from: generated_watershed_id
+  - name: Watershed at point 4 - details
+    url: "{{host}}/api/v1/watersheds/{{watershed_id}}?generated_id={{generated_watershed_id}}"
+    method: get
+    expect:
+      status: 200
+      values:
+        annual_precipitation:
+          gt: 1500
+          lt: 1600
+        potential_evapotranspiration:
+          gt: 810
+          lt: 830
+        median_elevation:
+          gt: 1270
+          lt: 1280
+        solar_exposure:
+          gt: 0.69
+          lt: 0.70
   - name: Watershed at point 3 - licences
     url: "{{host}}/api/v1/watersheds/{{watershed_id}}/licences?generated_id={{generated_watershed_id}}"
     method: get
