--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,75 +15,79 @@
   },
   "dependencies": {
     "@bcgov/bc-sans": "^1.0.1",
-    "@mapbox/mapbox-gl-draw": "^1.2.2",
-    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
-    "@mdi/font": "^4.4.95",
-    "@sentry/browser": "^5.9.1",
-    "@sentry/integrations": "^5.8.0",
-    "@tmcw/togeojson": "^4.2.0",
-    "@turf/area": "^6.0.1",
-    "@turf/bbox": "^6.0.1",
-    "@turf/bbox-polygon": "^6.0.1",
-    "@turf/boolean-point-in-polygon": "^6.0.1",
-    "@turf/buffer": "^5.1.5",
-    "@turf/centroid": "^6.0.2",
-    "@turf/circle": "^6.0.1",
-    "@turf/length": "^6.0.2",
-    "@turf/line-to-polygon": "^6.0.1",
-    "@turf/union": "^6.0.3",
-    "acorn": "^8.0.5",
+    "@mapbox/mapbox-gl-draw": "^1.3.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.1",
+    "@mdi/font": "^5.9.55",
+    "@sentry/browser": "^6.7.1",
+    "@sentry/integrations": "^6.7.1",
+    "@tmcw/togeojson": "^4.4.1",
+    "@turf/area": "^6.3.0",
+    "@turf/bbox": "^6.3.0",
+    "@turf/bbox-polygon": "^6.3.0",
+    "@turf/boolean-point-in-polygon": "^6.3.0",
+    "@turf/buffer": "^6.3.0",
+    "@turf/centroid": "^6.3.0",
+    "@turf/circle": "^6.3.0",
+    "@turf/length": "^6.3.0",
+    "@turf/line-to-polygon": "^6.3.0",
+    "@turf/union": "^6.3.0",
+    "acorn": "^8.4.0",
     "axios": "^0.21.1",
     "csv2geojson": "^5.1.1",
-    "file-saver": "^2.0.2",
-    "html2canvas": "^1.0.0-rc.5",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
-    "keycloak-js": "^6.0.1",
-    "leaflet": "^1.5.1",
+    "keycloak-js": "^13.0.1",
+    "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.unionby": "^4.8.0",
-    "mapbox-gl": "^1.12.0",
+    "mapbox-gl": "^2.3.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
-    "material-design-icons-iconfont": "^5.0.1",
-    "moment": "^2.24.0",
-    "proj4": "^2.6.3",
+    "material-design-icons-iconfont": "^6.1.0",
+    "moment": "^2.29.1",
+    "proj4": "^2.7.2",
     "shapefile": "^0.6.6",
-    "vue": "^2.6.10",
-    "vue-matomo": "^3.13.4-1",
-    "vue-plotly": "^1.0.1",
-    "vue-router": "^3.0.3",
-    "vuetify": "^2.4.2",
-    "vuex": "^3.0.1",
-    "xlsx": "^0.16.7"
+    "vue": "^2.6.14",
+    "vue-matomo": "^4.0.0",
+    "vue-plotly": "^1.1.0",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.5.4",
+    "vuex": "^3.6.2",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-essentials": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/vue": "^6.1.11",
-    "@vue/babel-preset-app": "^4.5.4",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-unit-jest": "^4.5.6",
-    "@vue/cli-service": "^4.5.9",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.30",
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/vue": "^6.2.9",
+    "@vue/babel-preset-app": "^4.5.13",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "@vue/test-utils": "^1.2.1",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "compression-webpack-plugin": "^6.1.1",
-    "core-js": "^3.7.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "jest-canvas-mock": "^2.2.0",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.3.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.6.0",
+    "core-js": "^3.14.0",
+    "eslint": "^7.28.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.11.1",
+    "jest-canvas-mock": "^2.3.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.1.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^6.1.0",
+    "vue-cli-plugin-vuetify": "^2.4.1",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.2",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
