Package updates, removed storybook, and removed unnecessary text on charts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "node --max_old_space_size=8000 node_modules/@vue/cli-service/bin/vue-cli-service.js build",
     "test:unit": "vue-cli-service test:unit --no-cache",
-    "test:coverage": "vue-cli-service test:unit --coverage",
     "lint": "vue-cli-service lint",
     "build:report": "vue-cli-service build --report",
     "build:report:json": "vue-cli-service build --report-json",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "test:coverage": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
     "@bcgov/bc-sans": "^1.0.1",
@@ -33,6 +31,7 @@
     "@turf/union": "^6.0.3",
     "acorn": "^8.0.5",
     "axios": "^0.21.1",
+    "core-js": "^3.6.5",
     "csv2geojson": "^5.1.1",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
@@ -45,43 +44,44 @@
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
+    "plotly.js": "^2.0.0",
     "proj4": "^2.6.3",
     "shapefile": "^0.6.6",
     "vue": "^2.6.10",
     "vue-matomo": "^3.13.4-1",
-    "vue-plotly": "^1.0.1",
+    "vue-plotly": "^1.1.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.4.2",
     "vuex": "^3.0.1",
     "xlsx": "^0.16.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-essentials": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/vue": "^6.1.11",
+    "@babel/core": "^7.14.6",
     "@vue/babel-preset-app": "^4.5.4",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-plugin-unit-jest": "^4.5.6",
     "@vue/cli-service": "^4.5.9",
-    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.0-beta.30",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "compression-webpack-plugin": "^6.1.1",
-    "core-js": "^3.7.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "core-js": "^3.14.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "jest-canvas-mock": "^2.2.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.6.0",
     "webpack-visualizer-plugin": "^0.1.11"
