update import script

--- a/openshift/import-jobs/hydat.job.yaml
+++ b/openshift/import-jobs/hydat.job.yaml
@@ -52,4 +52,6 @@ objects:
                   name: wally-psql
             - name: POSTGRES_SERVER
               value: wally-psql-${ENV_NAME}
+            - name: PGLOADER_LOG_DIR
+              value: /dataload/pgloader
           restartPolicy: Never
